# beam

./: .dockerignore  .gitignore  .gitpod.yml  CHANGELOG.md  Cargo.toml  Cross.toml  DATAFLOWS.md  Dockerfile  Dockerfile.broker  Dockerfile.broker.basedonprebuild  Dockerfile.broker.githubci  Dockerfile.ci.broker  Dockerfile.ci.proxy  Dockerfile.non-ci.broker  Dockerfile.non-ci.proxy  Dockerfile.proxy  Dockerfile.proxy.basedonprebuild  Dockerfile.proxy.githubci  LICENSE  README.md  deny.toml  dev_setup.sh  test.sh
.github/workflows/: docker.yml  dockerhub_readme.yml  rust.yml  rust_security.yml
beam-lib/: Cargo.toml
beam-lib/src/: http_util.rs  ids.rs  lib.rs  messages.rs  sockets.rs
broker/: Cargo.toml  build.rs
broker/src/: banner.rs  compare_client_server_version.rs  config.rs  crypto.rs  dataobjects.rs  expire.rs  health.rs  main.rs  serve.rs  serve_health.rs  serve_pki.rs  serve_sockets.rs  serve_tasks.rs  socks.rs  task_manager.rs
central/: Cargo.toml
central/src/: banner.rs  devhelper.rs  errors.rs  logic_warp.rs  main.rs  serve.rs  serve_axum.rs  serve_health.rs  serve_tasks.rs  serve_warp.rs
central/tests/: tests.rs
dataobjects/: Cargo.toml
dataobjects/src/: beam_id.rs  errors.rs  lib.rs
dev/: beamdev  docker-compose.j2  docker-compose.yml  example_json.sh  large_task.json  test  test_1_create_task_and_results.sh  test_2_fetch_with_proxy2.sh  test_3_fetch_with_sse.sh  test_3_retrieve_via_todo.sh  test_4_retrieve_via_to.sh  test_4_retrieve_via_todo.sh  test_5_large_requests.sh  test_5_multiple_results.sh  test_5_retrieve_via_to.sh  test_6_large_requests.sh  test_7_very_large_requests.sh
dev/pki/: pki
pki/: pki
proxy/: Cargo.toml  build.rs
proxy/monitor/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
proxy/monitor/src/: App.svelte  app.css  store.ts  task.ts  types.ts
proxy/monitor/src/lib/: Body.svelte  EventList.svelte  Expandable.svelte  Nav.svelte  RequestList.svelte  ResultView.svelte  TaskView.svelte
proxy/src/: auth.rs  banner.rs  config.rs  crypto.rs  lib.rs  main.rs  monitor.rs  reverse.rs  serve.rs  serve_health.rs  serve_sockets.rs  serve_tasks.rs  start.rs
proxy/src/monitorer/: mod.rs  monitorer.rs
shared/: Cargo.toml
shared/src/: beam_id.rs  beam_id2.rs  compare_client_server_version.rs  config.rs  config_broker.rs  config_central.rs  config_proxy.rs  config_shared.rs  crypto.rs  crypto_jwt.rs  drop_privileges.rs  errors.rs  examples.rs  expire_map.rs  graceful_shutdown.rs  http_client.rs  http_proxy.rs  lib.rs  logger.rs  middleware.rs  serde_helpers.rs  serializing_compatability_test.rs  serializing_compatibility_test.rs  sockets.rs  sse_event.rs  traits.rs
tests/: Cargo.toml  broker.secrets.example  socket_test.rs
tests/scripts/: cargo-test.sh  run.sh  setup.sh  test_1_create_task.sh
tests/src/: lib.rs  permission_test.rs  socket_test.rs  task_test.rs  tasts_test.rs  test_sse.rs
tests/viadocker/: beamdev  docker-compose.yml  example_json.sh  run.sh  test.sh  test_1_create_task.sh  test_1_create_task_and_results.sh  test_2_create_results.sh
tests/viadocker/pki/: dktk_root_2022_ca.crt.pem  dummy.chain.pem  dummy.crt.pem  dummy.json  dummy.priv.pem  pki  pki.secret  pki_hd_intermediate.csr.pem  proxy1.crt.pem  proxy1.json  proxy1.priv.pem  proxy2.crt.pem  proxy2.json  proxy2.priv.pem
