[workspace]
members = ["proxy", "broker", "shared", "tests", "beam-lib"]
resolver = "2"

[workspace.dependencies]
beam-lib = { path = "./beam-lib", features = [ "strict-ids" ] }

[profile.release]
#opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[profile.bloat]
inherits = "release"
strip = false
