[workspace]
members = ["proxy", "broker", "shared", "tests", "beam-lib"]
resolver = "2"
package.version = "0.11.0"

[workspace.dependencies]
beam-lib = { path = "./beam-lib", features = [ "strict-ids" ] }
rsa = "0.10.0-rc.18"
chacha20poly1305 = "0.11"
rand = "0.10"
# Command Line Interface
clap = { version = "4", features = ["env", "derive"] }
reqwest = { version = "0.13", default-features = false }
futures = { version = "0.3" }

[profile.release]
#opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[profile.bloat]
inherits = "release"
strip = false
