[package]
name = "beam-lib"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "stream"], default-features = false, optional = true }
thiserror = { version = "1.0", optional = true }
futures-core = { version = "0.3", optional = true }
bytes = { version = "1.7.1", optional = true }

[features]
strict-ids = []
http-util = ["dep:reqwest", "dep:thiserror"]
sockets = ["dep:futures-core", "dep:bytes"]
