[package]
name = "beam-lib"
version = { workspace = true }
edition = "2021"
license = "Apache-2.0"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }
thiserror = { version = "2.0", optional = true }

[features]
strict-ids = []
http-util = ["dep:reqwest", "dep:thiserror"]
sockets = []
