[package]
name = "broker"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared", features = ["config-for-central"] }

tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.6", features = [ "query" ] }
#axum-macros = "0.2.2"

anyhow = "*"
thiserror = "1.0.31"

# Logging is imported through shared
tracing = "0.1.35"
#tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

hyper = { version = "0.14.19", features = ["full"] }
hyper-tls = "0.5.0"
hyper-proxy = "0.9.1"

[build-dependencies]
build-data = "0"
