[package]
name = "broker"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://github.com/samply/beam"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared", features = ["config-for-central"] }
beam-lib = { workspace = true }

tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.6", features = [ "query", "headers" ] }
#axum-macros = "0.3.7"
dashmap =  "5.4"

anyhow = "*"
thiserror = "1.0.31"
backoff = { version = "0.4.0", features = ["tokio"] }

# Logging is imported through shared
tracing = "0.1.35"
#tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

hyper = { version = "0.14.19", features = ["full"] }
hyper-tls = "0.5.0"
hyper-proxy = "0.9.1"

# Server-sent Events (SSE) support
async-stream = "0.3.4"
futures-core = { version = "0.3.26", default-features = false }
once_cell = "1.17.1"
# Socket dependencies
bytes = { version = "1.4.0", optional = true }

[features]
sockets = ["dep:bytes", "shared/sockets"]

[build-dependencies]
build-data = "0"
