[package]
name = "beam-broker"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://github.com/samply/beam"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared", features = ["config-for-central"] }
beam-lib = { workspace = true }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = [ "query" ] }
#axum-macros = "0.3.7"
dashmap =  "5.4"

anyhow = "1"
thiserror = "1"

# Subscriber is setup through shared
tracing = "0.1"

# Server-sent Events (SSE) support
async-stream = "0.3"
futures-core = { version = "0.3", default-features = false }
once_cell = "1"
# Socket dependencies
bytes = { version = "1", optional = true }
axum-extra = { version = "0.9", features = ["typed-header"] }
hyper = { version = "1", default-features = false, optional = true}
hyper-util = { version = "0.1", default-features = false, features = ["tokio"], optional = true}

[features]
sockets = ["dep:bytes", "shared/sockets", "dep:hyper", "dep:hyper-util"]

[build-dependencies]
build-data = "0"
