[package]
name = "central"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
assert_cmd = "2.0"
#predicates = "2.1"

[dependencies]
tokio = { version = "1", features = ["full"] }
shared = { path = "../shared" }
uuid = { version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]}
url = "2.2.2"

#TODO: Debug only
pretty_env_logger = "0.4.0"
log = "0.4"

[dependencies.warp]
version = "0.3"
optional = true

[dependencies.axum]
version = "0.5.9"
optional = true

[dependencies.axum-macros]
version = "0.2.2"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[features]
#default = ["backend-warp"]
default = ["backend-axum"]
backend-warp = [ "warp" ]
backend-axum = [ "axum", "serde", "serde_json" ]