[package]
name = "central"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
assert_cmd = "2.0"
#predicates = "2.1"

[dependencies]
tokio = { version = "1", features = ["full"] }
shared = { path = "../shared" }
uuid = { version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]}
url = "2.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.5.9"
axum-macros = "0.2.2"
