[package]
name = "central"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared", features = ["config-for-central"] }

tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]}
url = "2.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.5.9", features = [ "query" ] }
axum-macros = "0.2.2"
ctrlc = { version = "3.2.2", features = ["termination"] }
lazy_static = "1.4.0"

anyhow = "*"

# Logging is imported through shared
tracing = "0.1.35"
#tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
