[package]
name = "dataobjects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
url = "2.2.2"
axum = "0.5.9"
hyper = { version = "0.14.19", features = ["full"] }

# HTTP client with proxy support
#hyper-tls = "0.5.0"
hyper-proxy = "0.9.1"

# Logging
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

# Crypto
rand = "0.8.5"
rsa = "0.6"
sha2 = "0.10.2"
openssl = "0.10.40"
aes-gcm = "0.9.4"
vaultrs = { git = "https://github.com/jmgilman/vaultrs", default-features = false, features = [ "native-tls" ] }# <= Change once update > 0.6.2 is out
jwt-simple = { git = "https://github.com/jedisct1/rust-jwt-simple", rev="b6a2c5be" } # <= Change once version >0.11.0 is out

# Global variables
static_init = "1.0.2"
once_cell = "1.13.0"

# Error handling
thiserror = "1.0.31"
anyhow = "1.0.58"

# Command Line Interface
clap = { version = "3.2.8", features = ["env", "derive"] }

http = "*"

[dev-dependencies]
tokio-test = "0.4.2"

[features]
default = []
config-for-proxy = []
config-for-central = []
