[package]
name = "dataobjects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

# Crypto
rand = "0.8.5"
rand_chacha = "0.3.1"

# Global variables
once_cell = "1.13.0"

# Error handling
thiserror = "1.0.31"
anyhow = "1.0.58"

# Command Line Interface
clap = { version = "3.2.8", features = ["env", "derive"] }
