[package]
name = "beam-proxy"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://github.com/samply/beam"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared", features = ["config-for-proxy"] }
beam-lib = { workspace = true }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
bytes = { version = "1" }
httpdate = "1.0"

# Error handling
anyhow = "1"
backoff = { version = "0.4", features = ["tokio"] }

# Subscriber is imported through shared
tracing = "0.1"

# Config file parsing
serde = "1"
serde_json = "1"

# Encryption handling
rsa = "0.9"

# Server-sent Events (SSE) support
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-sse = "5.1"
async-stream = "0.3"

# Socket dependencies
chacha20poly1305 = { version = "0.10", features = ["stream"], optional = true }
dashmap =  { version = "5.5", optional = true}
hyper = { version = "1", default-features = false, optional = true }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"], optional = true}

[features]
sockets = ["dep:chacha20poly1305", "dep:dashmap", "tokio-util/codec", "tokio-util/compat", "shared/sockets", "shared/expire_map", "dep:hyper", "dep:hyper-util"]

[build-dependencies]
build-data = "0"
