[package]
name = "beam-proxy"
version = { workspace = true }
edition = "2021"
license = "Apache-2.0"
documentation = "https://github.com/samply/beam"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
beam-lib = { workspace = true }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
bytes = { version = "1" }
httpdate = "1.0"
clap.workspace = true
regex = "1"

# Error handling
anyhow = "1"
tryhard = "0.5"

# Subscriber is imported through shared
tracing = "0.1"

# Config file parsing
serde = "1"
serde_json = "1"

# Encryption handling
rsa = "0.9"

# Server-sent Events (SSE) support
tokio-util = "0.7"
futures.workspace = true
sse-stream = "0.2.3"
async-stream = "0.3"

# Socket dependencies
chacha20poly1305 = { version = "0.11", features = ["stream"], optional = true }
dashmap =  { version = "6.0", optional = true}
hyper = { version = "1", default-features = false, optional = true }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"], optional = true}

[features]
sockets = ["dep:chacha20poly1305", "dep:dashmap", "tokio-util/codec", "tokio-util/compat", "shared/sockets", "shared/expire_map", "dep:hyper", "dep:hyper-util"]

[build-dependencies]
build-data = "0"

[dev-dependencies]
rand = "0.8.5"
