[package]
name = "shared"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://github.com/samply/beam"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde"
]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = [] }
bytes = "1.4"

# HTTP client with proxy support
reqwest = { version = "0.12", features = ["stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
rand = "0.8"
rsa = "0.9"
sha2 = "0.10"
openssl = "0.10"
chacha20poly1305 = "0.10"
itertools = "0.12.0"
jwt-simple = "0.11"

# Global variables
once_cell = "1"

# Error handling
thiserror = "1"

# Command Line Interface
clap = { version = "4", features = ["env", "derive"] }

fundu = "2.0"
regex = "1"

# expire map dependencies
dashmap =  { version = "5.4", optional = true}

beam-lib = { workspace = true }

[features]
expire_map = ["dep:dashmap"]
sockets = ["expire_map", "beam-lib/sockets"]
default = []
config-for-proxy = []
config-for-central = []
