[package]
name = "shared"
version = { workspace = true }
edition = "2021"
license = "Apache-2.0"
documentation = "https://github.com/samply/beam"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde"
]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap.workspace = true

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = [] }
bytes = "1.4"
futures.workspace = true

# This includes all default features of reqwest but uses native-tls aka openssl as we depend on it for encryption anyways
reqwest = { workspace = true, features = ["stream", "native-tls", "charset", "system-proxy", "http2"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto
rand = "0.10"
rsa = "0.10.0-rc.18"
sha2 = "0.11"
openssl = "0.10"
chacha20poly1305 = "0.10"
itertools = "0.14.0"
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }

# Global variables
once_cell = "1"

# Error handling
thiserror = "2"


fundu = "2.0"

# expire map dependencies
dashmap =  { version = "6.0", optional = true}

beam-lib = { workspace = true }
async-trait = "0.1"
tracing-appender = "0.2.3"

[features]
expire_map = ["dep:dashmap"]
sockets = ["expire_map", "beam-lib/sockets", "reqwest/json"]
default = []
