[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.28.0", features = ["macros", "io-util"] }
beam-lib = { workspace = true, features = ["http-util"] }
once_cell = "1.17.1"
serde_json = "1.0.96"
http = "0.2.9"
anyhow = "1.0.71"
hyper = { version = "0.14.27", features = ["client", "http1", "tcp"] }
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["stream"], default-features = false }
futures = "0.3.28"
async-sse = "5.1.0"

[features]
sockets = ["beam-lib/sockets"]
