[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["macros", "io-util"] }
beam-lib = { workspace = true, features = ["http-util"] }
once_cell = "1"
serde_json = "1"
anyhow = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["stream"], default-features = false }
futures = "0.3.28"
async-sse = "5.1.0"

[features]
sockets = ["beam-lib/sockets"]
